--- a/styles/app.css
+++ b/styles/app.css
@@ -1,10 +1,43 @@
 body {
-  background: radial-gradient(white, yellow, orange, red) fixed;
-  font-size: 1.5em;
+  background: radial-gradient(#ff7777, #ff2222) fixed;
+  margin: 0 auto;
+  text-align: center;
 }
 
-h1, h3 {
-  font-family: "Luckiest Guy", cursive;
-  text-align: center;
+h1, h3, button {
+  font-family: "Changa One", cursive;
   text-transform: uppercase;
+  text-shadow: 0px 2px 10px #666;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+h3 {
+  font-size: 3em;
+}
+
+button {
+  font-size: 1.5em;
+  background: #ff9999;
+  border: 2px solid #ff5555;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+
+button:hover {
+  background: #ffaaaa;
+  cursor: pointer;
+}
+
+button + button {
+  margin-left: 10px;
+}
+
+#github-fork > img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0;
 }
