--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -27,16 +27,16 @@ h3 {
 
 button {
   font-size: 1.5em;
-  background: #ff9999;
+  background-color: #ff9999;
   border: 2px solid #ff5555;
   border-radius: 10px;
   margin: 10px;
   padding: 10px 20px;
-}
 
-button:hover {
-  background: #ffaaaa;
-  cursor: pointer;
+  &:hover {
+    background-color: #ffaaaa;
+    cursor: pointer;
+  }
 }
 
 #github-fork > img {
