--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,12 +1,14 @@
 @import url("//fonts.googleapis.com/css?family=Changa+One");
 
 body {
-  background: radial-gradient(#ff7777, #ff2222) fixed;
-  margin: 50px;
+  background: url("../images/background.png") no-repeat center center fixed; // See: https://github.com/qrohlf/trianglify
+  background-size: cover;
+  margin: 0px 75px;
   text-align: center;
 }
 
 h1, h3, button {
+  color: #222;
   font-family: "Changa One", "Courier New", monospace;
   text-transform: uppercase;
 }
@@ -27,14 +29,14 @@ h3 {
 
 button {
   font-size: 1.5em;
-  background-color: #ff9999;
-  border: 2px solid #ff5555;
+  background-color: transparent;
+  border: 2px dotted #555;
   border-radius: 10px;
   margin: 10px;
   padding: 10px 20px;
 
   &:hover {
-    background-color: #ffaaaa;
+    border: 2px solid #555;
     cursor: pointer;
   }
 }
