--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -14,7 +14,6 @@ h1, h3, button {
 }
 
 h1, h3 {
-  text-shadow: 0px 1px 2px #444;
   transform: perspective(300px) rotateX(25deg);
   transform-origin: 50% 100%;
 }
@@ -36,7 +35,7 @@ button {
   padding: 10px 20px;
 
   &:hover {
-    border: 2px solid #555;
+    border: 2px dashed #555;
     cursor: pointer;
   }
 }
