--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,16 +1,16 @@
-@import url("//fonts.googleapis.com/css?family=Changa+One");
+@import url("https://fonts.googleapis.com/css?family=Boogaloo");
 
 body {
   background: radial-gradient(#ff0000, #df0000) fixed;
-  margin: 20px;
-  text-align: center;
-  font-family: "Changa One", "Courier New", monospace;
+  margin: 0px;
+  padding: 20px;
   color: #eee;
+  font-family: "Boogaloo", "Helvetica", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 #header {
-  text-transform: uppercase;
-
   h1 {
     font-size: 2.5em;
     margin: 0px;
@@ -25,8 +25,12 @@ body {
     margin: 0px;
   }
 
+  img {
+    display: none;
+  }
+
   + #sounds {
-    margin-top: 20px;
+    margin-top: 30px;
   }
 }
 
@@ -39,13 +43,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-basis: 15%;
+    flex-basis: 35%;
     color: inherit;
     font-size: 1.1em;
-    text-transform: uppercase;
     text-decoration: none;
     background: fade-out(#eee, 0.85);
-    border: 2px solid #eee;
+    border: 4px solid #eee;
     margin: 5px;
     padding: 15px;
 
@@ -53,19 +56,26 @@ body {
       background: fade-out(#eee, 0.65);
     }
   }
+
+  + #footer {
+    margin-top: 30px;
+  }
 }
 
-#github-fork {
+#footer {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+#fork {
   img {
     display: none;
   }
 }
 
 @media screen and (min-width: 48em) {
-  body {
-    margin: 30px;
-  }
-
   #header {
     h1 {
       font-size: 3em;
@@ -73,20 +83,28 @@ body {
 
     h2 {
       font-size: 2em;
+
+      + img {
+        margin-top: 30px;
+      }
     }
 
-    + #sounds {
-      margin-top: 30px;
+    img {
+      display: inline;
+      height: 85px;
+      border: 8px solid #eee;
+      border-radius: 40px;
     }
   }
 
   #sounds {
     a {
       font-size: 1.2em;
+      flex-basis: 25%;
     }
   }
 
-  #github-fork {
+  #fork {
     img {
       display: inherit;
       position: absolute;
@@ -98,10 +116,6 @@ body {
 }
 
 @media screen and (min-width: 64em) {
-  body {
-    margin: 50px;
-  }
-
   #header {
     h1 {
       font-size: 4em;
@@ -109,10 +123,6 @@ body {
 
     h2 {
       font-size: 2.5em;
-    }
-
-    + #sounds {
-      margin-top: 50px;
     }
   }
 
@@ -122,6 +132,7 @@ body {
 
     a {
       font-size: 1.3em;
+      flex-basis: 15%;
     }
   }
 }
