Show loadmask for sounds

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Boogaloo");
+@import "node_modules/font-awesome/scss/font-awesome";
 
 body {
   background: radial-gradient(#ff0000, #df0000) fixed;
