--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,6 +9,7 @@ body {
   font-family: "Boogaloo", "Helvetica", sans-serif;
   text-align: center;
   text-transform: uppercase;
+  text-shadow: 1px 1px 5px #333;
 }
 
 #header {
@@ -49,6 +50,7 @@ body {
     font-size: 1.1em;
     font-family: inherit;
     text-transform: inherit;
+    text-shadow: inherit;
     cursor: pointer;
     background: fade-out(#eee, 0.85);
     border: 4px solid #eee;
